nav small on scroll

--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -1,4 +1,4 @@
-<nav class="py-2 navbar navbar-default navbar-expand-md navbar-dark sticky-top">
+<nav class="navbar navbar-default navbar-expand-md navbar-dark fixed-top">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#page-nav" aria-controls="page-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -10,12 +10,12 @@
         </div>
 
         <div class="collapse navbar-collapse" id="page-nav">
-            <div class="py-2 d-flex align-items-center navbar-brand">
+            <div class="d-flex align-items-center navbar-brand">
                 <a id="banner-home" title="University of Idaho Library" class="" href="https://www.lib.uidaho.edu/">
-                    <img class="img-fluid lib-logo-lg" src="{{ 'idaho.png' | relative_url }}" alt="University of Idaho Library [logo]"></a>
-
+                    <img class="img-fluid pr-4 lib-logo-lg" src="{{ 'idaho.png' | relative_url }}" alt="University of Idaho Library [logo]"></a>
+    
                 <a id="banner-home" title="Digital Initiatives" class="" href="{{ '/' | relative_url }}">
-                    <img class="img-fluid pl-4 lib-logo-md" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives [logo]"></a>
+                    <img class="img-fluid dig-logo-md" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives [logo]"></a>
             </div>
 
             <ul class="navbar-nav ml-auto">
@@ -41,4 +41,3 @@
         </div>
     </div>
 </nav>
-
