--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -13,7 +13,7 @@
         window.open("{{ '/collections.html' | relative_url }}#" + encodeURI(query) , "_blank" );
     }
 </script>
-<div id="home-banner" class="jumbotron jumbotron-fluid mb-0 p-0" aria-label="{{ site.data.theme.home-banner-image-title }}">
+<div id="home-banner" class="jumbotron jumbotron-fluid mt-5 p-0" aria-label="{{ site.data.theme.home-banner-image-title }}">
     <div class="container">
         <div class="row justify-content-center">
             <div id="home-title-box" class="col-md-8 text-center">
@@ -30,7 +30,7 @@
         
         <div class="row justify-content-center pb-5">
             <div class="col-md-10 text-center pb-5">
-                <div class="card mb-5" style="background:rgba(52, 58, 64, 0.8)">
+                <div class="card mb-5 browse-card">
                     <div class="card-body">
                         <h5 class="card-title text-light">Search Suggested Topics:</h5>
                             {% for b in buttons %}
