--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -16,6 +16,7 @@ a {
 
 .split-background {
     background: linear-gradient(to right, #e8e8e8 0%, #e8e8e8 50%, #fdfdfd 50%, #fdfdfd 100%);
+    padding-top: 100px;
 }
 
 /* banner */
@@ -40,28 +41,43 @@ a {
     }
 }
 
+.browse-card {
+    background: rgba(52, 58, 64, 0.8);
+}
+
+#home-banner {
+    padding-top: 100px;
+}
+
+/* nav */
+
 .lib-logo-lg {
     max-height: 80px;
 }
 
-.lib-logo-md {
-  max-height: 40px;
+.dig-logo-md {
+    max-height: 40px;
 }
 
-/* nav bar */
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
     color: rgba(255,255,255,.75);
 }
+
 .navbar-dark .navbar-nav .nav-link {
     color: rgba(255,255,255,.5);
 }
 
-.navbar-default{
+.navbar-default { 
   transition:500ms ease;
   background: #343a40;
 }
-.navbar-default.scrolled{
-  background:rgba(37, 36, 36, 0.72);
+
+.navbar-default.scrolled {
+  background:rgba(52, 58, 64, 0.8);
+}
+
+.navbar-default.scrolled .lib-logo-lg {
+    display: none;
 }
 
 /* item page */
