--- a/_includes/js/map-js.html
+++ b/_includes/js/map-js.html
@@ -1,4 +1,4 @@
-{%- assign items = site.data[site.data.theme.metadata] -%}
+{%- assign items = site.data.digital_all_collections -%}
 {%- assign fields = site.data.map-config -%}
 <!-- load leaflet dependencies -->
 <script src="{{ '/leaflet/leaflet.js' | prepend: site.digital-assets }}"></script>
@@ -9,10 +9,10 @@
 (function(){
     /* add collection map data */
     var geodata = { "type": "FeatureCollection", "features": [ 
-    {% for item in items %}{% if item.latitude and item.longitude %}
-    { "type":"Feature", "geometry":{ "type":"Point", "coordinates":[{{ item.longitude | strip }},{{ item.latitude | strip }}] }, "properties":
-    { "title": {{ item.title | jsonify }}, 
-    {% for f in fields %}"{{ f.field }}": {{ item[f.field] | jsonify }},{% endfor %} "cdm": {{ item.cdm-id | jsonify }}, "id": {{ item.object-id | jsonify }} } }{% unless forloop.last %}, {% endunless %}{% endif %}{% endfor %}
+    {% for item in items %}{% if item.lat and item.long %}
+    { "type":"Feature", "geometry":{ "type":"Point", "coordinates":[{{ item.long | strip }},{{ item.lat | strip }}] }, "properties":
+    { "title": {{ item.colltitle | jsonify }}, 
+    {% for f in fields %}"{{ f.field }}": {{ item[f.field] | jsonify }},{% endfor %} "web": {{ item.website | jsonify }}, "image": {{ item.image | jsonify }} } }{% unless forloop.last %}, {% endunless %}{% endif %}{% endfor %}
     ]};
 
     var hashfilter = decodeURIComponent(location.hash.substr(1));
@@ -67,7 +67,7 @@ if(window.location.hash) {
         pointToLayer: function(feature,latlng){
             var marker = L.marker(latlng);
             marker.bindPopup('<h3>' + feature.properties.title + 
-            '</h3><p><a class="btn btn-light" href="{% if site.data.theme.repo-link %}{{ site.data.theme.cdm-url }}/cdm/ref/collection/{{ site.data.theme.cdm-collection-id }}/id/' + feature.properties.cdm + '{% else %}{{ site.baseurl }}/items/' + feature.properties.id + '.html{% endif %}" ><img class="mapthumb" src="{{ site.data.theme.cdm-url }}/utils/getthumbnail/collection/{{ site.data.theme.cdm-collection-id }}/id/' + feature.properties.cdm + '" /></a>' +
+            '</h3><p><a class="btn btn-light" href="' + feature.properties.web + '"><img class="mapthumb" src="' + feature.properties.image + '" /></a>' +
             {% for f in fields %}{% if f.display %}
             '<br><strong>{{ f.display }}:</strong> ' + feature.properties.{{ f.field }} + {% endif %}{% endfor %}
             '<br><a class="btn btn-light" href="{% if site.data.theme.repo-link %}{{ site.data.theme.cdm-url }}/cdm/ref/collection/{{ site.data.theme.cdm-collection-id }}/id/' + feature.properties.cdm + '{% else %}{{ site.baseurl }}/items/' + feature.properties.id + '.html{% endif %}" >View Item</a></p>');
