--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <!-- Footer -->
-<footer class="bg-dark mt-3 pt-4 container-fluid">
+<footer class="bg-dark pt-4 container-fluid">
 
   <div class="row border-bottom border-white pb-4 mb-2">
 
     <!-- Grid column -->
-    <div class="col-md-7  px-4 mt-2">
+    <div class="col-md-7 px-4 mt-2">
 
       <!-- Content -->
       <h4 ><a href="{{ '/' | absolute_url }}" class="text-white">{{ site.data.theme.title }}</a></h4>
