--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 {% assign filters = site.data.browsebuttons %}
-
+{% assign page-nav = site.data.pagesnav %}
 <div id="sidebar" class="py-3 border-right d-none d-md-block pl-5">
+    {% if page.url contains 'collections' %}
     <h3 class="pt-3">Search by:</h3>
     <hr>
     <nav id="sidenav">
@@ -43,4 +44,30 @@
             </li>
         </ul>
     </nav>
+    {% else %}
+    <nav id="sidenav">
+        <ul class="list-unstyled components">
+            {% for sub in page-nav[page.section] %}
+            {% if sub.subpages %}{% assign urls = sub.subpages | map: "url" %}
+            <li class="border-bottom py-2 pl-1 pr-4">
+                <a {%if sub.type != "direct-link" %}href="#{{ sub.subsection | slugify }}" data-toggle="collapse" aria-expanded="false" {%else %}href="{{ sub.link | relative_url }}"{%endif%}class="dropdown-toggle" >{{ sub.subsection }}</a>
+                <ul class="collapse {% if urls contains page.url %} show{% endif %} list-unstyled" id="{{ sub.subsection | slugify }}">
+                    {% for p in sub.subpages %}
+                    <li class="pl-3 mt-1 {% if p.url == page.url %} active{% endif %}">
+                        <a href="{{ p.url | relative_url }}">{{ p.name }}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </li>
+            {% else %}
+            <li class="border-bottom py-2 pl-1 pr-4 {% if sub.link == page.url %} active{% endif %}">
+                <a href="{{ sub.link | relative_url }}">{{ sub.subsection }}</a>
+            </li>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    </nav>
+{% endif %}
 </div>
+
+
