--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,44 +1,21 @@
 <!-- Footer -->
 <footer class="bg-dark pt-4 container-fluid">
+  <div class="row border-bottom border-white pb-4">
 
-  <div class="row border-bottom border-white pb-4 mb-2">
-
-    <!-- Grid column -->
-    <div class="col-md-7 px-4 mt-2">
-
-      <!-- Content -->
-      <h4 ><a href="{{ '/' | absolute_url }}" class="text-white">{{ site.data.theme.title }}</a></h4>
-      <p class="text-white"><small>{{site.data.theme.description}}</small></p>
-      <ul class="nav nav-pills ">
-        {% for nav in site.data.nav-configuration %}
-        <li class="nav-item">
-          <a class="nav-link text-light clearwater" href="{{ nav.stub | relative_url }}">{{ nav.display-text }}</a> 
-        </li>
-        {% endfor %}
-      </ul>
-
+    <div class="col-6 text-left align-self-center">
+      <a href="https://www.lib.uidaho.edu/"><img alt="Digital Initiatives" src="https://www.lib.uidaho.edu/media/digital/library_white.png" class="img-fluid lib-logo-lg ml-5"></a>
     </div>
-    <!-- Grid column -->
 
-    <!-- Grid column -->
-    <div class="col-md-5 mt-2 text-right">
-
-      <h4 class="mb-0" ><a href="https://www.lib.uidaho.edu/digital/"><img class="img-fluid" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives"></a></h4>
-      <p class="text-white text-right mr-4"><small><a class="pride-gold" href="https://www.lib.uidaho.edu/digital/">About DI</a> | <a href="https://www.lib.uidaho.edu/digital/collections.html" class="pride-gold">Collections</a></small></p>
-      <p class="text-white">
-        <a href="https://www.lib.uidaho.edu/"><img alt="Digital Initiatives" src="https://www.lib.uidaho.edu/media/digital/liblogo_transparent.png" class="img-fluid col-4 col-md-3"></a>
-      </p>
-
+    <div class="col-6 text-right align-self-center">
+      <h4 class="mb-0" ><a href="https://www.lib.uidaho.edu/digital/"><img class="img-fluid mr-5" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives"></a></h4>
+      <!--<p class="text-white text-right mr-4"><small><a class="pride-gold" href="https://www.lib.uidaho.edu/digital/">Home</a> | <a href="https://www.lib.uidaho.edu/digital/about/" class="pride-gold">About</a> | <a href="https://www.lib.uidaho.edu/digital/collections.html" class="pride-gold">Collections</a></small></p>-->
     </div>
-    <!-- Grid column -->
 
   </div>
 
-  <!-- Copyright -->
   <div class="col-md-12 text-center pt-3 pb-1">
     <p class="text-white">Last updated {{ site.time | date: '%Y' }} 
     </p>
   </div>
-  <!-- Copyright -->
 
 </footer>
