--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -9,14 +9,16 @@
                 <img class="img-fluid float-right" id="mobile-nav-image" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" title="University of Idaho Library Digital Initiatives" alt="digital initiatives logo"></button>
         </div>
 
+        <div class="d-flex py-2 align-items-center navbar-brand">
+            <a id="banner-home" title="University of Idaho" class="d-none d-lg-block" href="https://www.lib.uidaho.edu/">
+                <img class="img-fluid pr-4 lib-logo-lg" src="{{ 'idaho.png' | relative_url }}" alt="University of Idaho Library [logo]"></a>
+
+            <a id="banner-home" title="Digital Initiatives" class="d-none d-md-block" href="{{ '/' | relative_url }}">
+                <img class="img-fluid dig-logo-md" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives [logo]"></a>
+        </div>
+
         <div class="collapse navbar-collapse" id="page-nav">
-            <div class="d-flex py-2 align-items-center navbar-brand">
-                <a id="banner-home" title="University of Idaho" class="" href="https://www.lib.uidaho.edu/">
-                    <img class="img-fluid pr-4 lib-logo-lg" src="{{ 'idaho.png' | relative_url }}" alt="University of Idaho Library [logo]"></a>
-    
-                <a id="banner-home" title="Digital Initiatives" class="" href="{{ '/' | relative_url }}">
-                    <img class="img-fluid dig-logo-md" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives [logo]"></a>
-            </div>
+            
 
             <ul class="navbar-nav ml-auto">
                 {% for nav in site.data.nav-configuration %}
