--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -59,6 +59,24 @@ a {
     max-height: 40px;
 }
 
+@include media-query($on-palm) {
+    .navbar {
+        min-height:100px; 
+    }
+}
+
+@include media-query($on-laptop) {
+    .navbar {
+        min-height:100px; 
+    }
+}
+
+@include media-query($on-desktop) {
+    .navbar {
+        min-height:100px; 
+    }
+}
+
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
     color: rgba(255,255,255,.75);
 }
