--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -14,7 +14,7 @@
                 <img class="img-fluid pr-4 lib-logo-lg" src="{{ 'idaho.png' | relative_url }}" alt="University of Idaho Library [logo]"></a>
 
             <a id="banner-home" title="Digital Initiatives" class="d-none d-md-block" href="{{ '/' | relative_url }}">
-                <img class="img-fluid dig-logo-md" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives [logo]"></a>
+                <img class="img-fluid lib-logo-md" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives [logo]"></a>
         </div>
 
         <div class="collapse navbar-collapse" id="page-nav">
