fix filter on collections page

--- a/_layouts/collections.html
+++ b/_layouts/collections.html
@@ -23,7 +23,7 @@ layout: page
     <div class="col-md-12">
         <div class="row" id="browseItems">
             {% for c in collections %}
-            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 my-3">
+            <div class="item col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 my-3">
                 <div class="card mb-3">
                     <div class="card-body text-center search">
                         <h4 class="card-title mt-2"><a href="{{ c.website }}" class="text-dark">{{ c.colltitle }}</a></h4>
