--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -207,7 +207,7 @@ dt {
     background-color: $black-color;
 }
 /* map */
-#map { height: 750px; z-index: 98; }
+#map { height: 750px; z-index: 98; margin-top: 110px; }
 .mapthumb {
     height: 100px;
     box-shadow: 2px 2px 2px grey;
