--- a/_includes/js/cdil-js.html
+++ b/_includes/js/cdil-js.html
@@ -1,12 +1,12 @@
 {%- assign cdil = site.data.digital_all_collections | where: "type","CDIL" -%}
 
 <script> 
-    var cdilItems = [ {% for c in cdil %}{ "title": {{ c.colltitle | jsonify }}, "image": "{{ c.image }}", "website": "{{ c.website }}", "description": "{{ c.shortdesc }}" }{% unless forloop.last %}, {% endunless %}{% endfor %}];
+    var cdilItems = [ {% for c in cdil %}{% if c.status != 'noshow' %}{ "title": {{ c.colltitle | jsonify }}, "image": "{{ c.image }}", "website": "{{ c.website }}", "description": "{{ c.shortdesc }}" }{% unless forloop.last %}, {% endunless %}{% endif %}{% endfor %}];
     var cdilImage = document.getElementById("cdilInner");
     cdilItems.sort(function() { return 0.5 - Math.random() });
     var i;
     for (i=0; i < 3; i++) {
-        card = "<div class='col-md-10 my-3'><div class='card text-center border-secondary'><img class='card-img-top' src=" + cdilItems[i].image + " alt='Card image cap'><div class='card-body'><h4 class='card-title'><a href='" + cdilItems[i].website + "'>" + cdilItems[i].title + "</a></h4><p class='card-text'>" + cdilItems[i].description + "</p></div><div class='card-footer'><a href='" + cdilItems[i].website + "' class='btn btn-clearwater'>View Project</a></div></div></div>";
+        card = "<div class='col-md-10 my-3'><div class='card text-center border-secondary'><img class='card-img-top' src=" + cdilItems[i].image + " alt='Card image cap'><div class='card-body border-top'><h4 class='card-title'><a href='" + cdilItems[i].website + "'>" + cdilItems[i].title + "</a></h4><p class='card-text'>" + cdilItems[i].description + "</p></div><div class='card-footer'><a href='" + cdilItems[i].website + "' class='btn btn-clearwater btn-round'>View Project</a></div></div></div>";
         cdilImage.innerHTML += card;
     }
 </script>
