working on media types on cards

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -145,6 +145,8 @@ dt {
     visibility:visible;
 }
 
+/* cards */
+
 .card-img-top {
     width: 100%;
     height: 30vh;
@@ -156,43 +158,6 @@ dt {
     height: 30vh;
     object-fit: cover;
 }
-
-/* collection cards */
-/*
-.custom-card {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    margin-bottom: 30px;
-    border-radius: 6px;
-    color: rgba(0, 0, 0, 0.87);
-    background: #fff;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-} 
-
-.custom-card .card-image {
-    height: 60%;
-    position: relative;
-    overflow: hidden;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: -30px;
-    border-radius: 6px;
-    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
-}
-
-.custom-card .card-image img {
-    border-radius: 6px;
-    pointer-events: none;
-    width: 100%;
-    height: 30vh;
-    object-fit: cover;
-}
-
-.img-raised {
-    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
-}
-*/
 
 .btn-round{
     border-radius: 30px;
@@ -206,6 +171,14 @@ dt {
 .collection-footer{
     background-color: $black-color;
 }
+
+/* browse */
+.hidden-format-for-browse{
+    color:rgba(0, 0, 0, 0);
+    font-size:1px;
+    line-height: 1px;
+}
+
 /* map */
 #map { height: 750px; z-index: 98; margin-top: 110px; }
 .mapthumb {
