--- a/_layouts/collections.html
+++ b/_layouts/collections.html
@@ -23,13 +23,15 @@ layout: page
     <div class="col-md-12">
         <div class="row" id="browseItems">
             {% for c in collections %}
+            {% if c.status != 'noshow' %}
             <div class="item col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 my-3">
-                <div class="card mb-3">
+                <div class="card mb-3 border-secondary">
+                    {%- assign format-for-browse = c.mediatype | strip | split: ';' | downcase -%}
                     <div class="card-body text-center search">
-                        <h4 class="card-title mt-2"><a href="{{ c.website }}" class="text-dark">{{ c.colltitle }}</a></h4>
+                        <h3 class="card-title mt-2"><a href="{{ c.website }}" class="text-dark">{{ c.colltitle }}</a></h3>
                         <div class="card-image">
                             <a href="{{ c.website }}">
-                                <img class="collection-img lazyload mt-1 mb-3 px-2 img-fluid" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
+                                <img class="collection-img lazyload mt-1 mb-3 px-4 img-fluid" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
                             </a>
                         </div>
                         <p>
@@ -44,14 +46,22 @@ layout: page
                                 {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
                                 {% unless forloop.last %}<br>{% endunless %}
                                 {% endif %}{% endif %}{% endfor %}
-                            </small></p>
-                        <hr>
-                        <p>
-                            <a href="{{ c.website }}" class="btn btn-ponderosa-pine btn-round mt-3" title="link to {{ c.colltitle | escape }}" target="_blank" rel="noopener">View Collection</a>
+                            </small>
                         </p>
+                        <p class="card-text">
+                            {%- capture media -%}{{ c.mediatype | strip}}{%- endcapture -%}
+                            {%- assign media = media | split: ';' | compact -%}
+                            {% for m in media %}{% if m !=" " and m != "" %}
+                            <small><a href="{{ extension | prepend: '/collections/#' | relative_url }}" class="filter btn btn-sm btn-outline-secondary">{{ m | upcase }} <span class="far {% if c.format contains 'image' %}fa-image{% elsif c.format contains 'audio' %}fa-file-audio{% elsif c.format contains 'video' %}fa-file-video{%else%}fa-file{% endif %}"></span></a></small>
+                            <span class="hidden-format-for-browse">{{format-for-browse | replace: "application", "application document"}}</span>
+                            {% endif %}{% endfor %}
+                        </p>
+                        <hr>
+                            <a href="{{ c.website }}" class="btn btn-ponderosa-pine btn-round" title="link to {{ c.colltitle | escape }}" target="_blank" rel="noopener">View Collection</a>
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
