working on sidebar mobile

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -69,7 +69,7 @@
         </ul>
     </nav>
     {% else %}
-    <h3>{{ page.title }}</h3>
+    <h3>{{ page.section }}</h3>
     <hr>
     <nav id="sidenav">
         <ul class="list-unstyled components">
