--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -9,7 +9,7 @@
 {% if page.layout == "map" %}{% include js/map-js.html %}{% endif %}
 {% if layout.gallery == true %}{% include js/gallery-js.html %}{% endif %}
 {% if page.layout == "home-infographic" %}{% include js/featured-js.html %}{% include js/cdil-js.html %}{% include js/campus-js.html %}{% include js/banner-js.html %}{% endif %}
-{% if page.layout == "item" %}{% include js/arrow-page-control-js.html %}{% endif %}
+{% include js/page-sidebar-js.html %}
 <script defer src="{{ '/fontawesome/js/all.min.js' | prepend: site.digital-assets }}"></script>
 <script>
 $(window).scroll(function(){
