--- a/_includes/index/locations-sm.html
+++ b/_includes/index/locations-sm.html
@@ -1,7 +1,7 @@
 {%- if site.data.theme.featured-locations -%}
 {%- assign topLocations = site.data.theme.featured-locations | split: ";" -%}
 {%- else -%}
-{%- assign locations = site.data[site.data.theme.metadata] | map: "location" | join: ";" | split: ";" | array_count_uniq -%}
+{%- assign locations = site.data.digital_all_collections | map: "location" | join: ";" | split: ";" | array_count_uniq -%}
 {%- capture topLocations -%}
 {% for i in locations limit: site.data.theme.featured-locations-max %}{{ i[0] }};{% endfor %}{% endcapture %}
 {%- assign topLocations = topLocations | split: ";" -%}
