--- a/_includes/index/objects.html
+++ b/_includes/index/objects.html
@@ -1,4 +1,4 @@
-{%- assign formats = site.data[site.data.theme.metadata] | map: "format" -%}
+{%- assign formats = site.data.digital_all_collections | map: "mediatype" -%}
 {%- assign types = "image;audio;video;application" | split: ";" -%}
 <div class="card mb-3" >
   <div class="card-body">
