--- a/_includes/index/subjects.html
+++ b/_includes/index/subjects.html
@@ -1,7 +1,7 @@
 {%- if site.data.theme.featured-subjects -%}
 {%- assign topSubjects = site.data.theme.featured-subjects | split: ";" -%}
 {%- else -%}
-{%- assign subjects = site.data[site.data.theme.metadata] | map: "subject" | join: ";" | downcase | split: ";" | array_count_uniq -%}
+{%- assign subjects = site.data.digital_all_collections | map: "categories" | join: ";" | downcase | split: ";" | array_count_uniq -%}
 {%- capture topSubjects -%}
 {% for i in subjects limit: site.data.theme.featured-subjects-max %}{{ i[0] }};{% endfor %}{% endcapture %}
 {%- assign topSubjects = topSubjects | split: ";" -%}
