--- a/_includes/index/time.html
+++ b/_includes/index/time.html
@@ -1,4 +1,4 @@
-{%- assign raw-dates = items | map: 'date' | compact-%}
+{%- assign raw-dates = items | map: 'datestart' | compact-%}
 {% capture clean-dates %}{% for date in raw-dates %}{% if date != "" %}{% if date contains "-" %}{{date | split: "-" | first }}{% elsif date contains "/" %}{{ date | split: "/" | last }}{% else %}{{ date }}{% endif %}{% unless forloop.last %};{% endunless %}{% endif %}{%- endfor -%}{% endcapture %}
 {%- assign date-range = clean-dates | split: ";" | sort  -%}
 <div class="card mb-3">
