--- a/_includes/index/cdil-projects.html
+++ b/_includes/index/cdil-projects.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <h3>CDIL Digital Scholarship Projects &nbsp&nbsp<small class="text-muted"><a href="https://cdil.lib.uidaho.edu" target="_blank" rel="noopener">MORE...</a></small></h3>
+    <h3>CDIL Digital Scholarship Projects &nbsp<small><a href="https://cdil.lib.uidaho.edu" target="_blank" rel="noopener">more...</a></small></h3>
 </div>
 <div class="row justify-content-center" id="cdilInner">
 
