sidebar scroll inside categories

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 {% assign page-nav = site.data.pagesnav %}
 <div id="sidebar" class="border-right d-none d-md-block pl-5">
     {% if page.url contains 'collections' %}
-    <h3>Search by:</h3>
+    <h3>Search:</h3>
     <hr>
     <nav id="sidenav" class="pt-3">
         <ul class="list-unstyled components" id="accordion">
