--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,21 +2,15 @@
 <footer class="bg-dark pt-4">
   <div class="container">
 
-    <div class="row border-bottom border-white pb-4">
+    <div class="row pb-4">
 
-      <div class="col-md-6">
-        <a href="https://www.lib.uidaho.edu/"><img alt="Digital Initiatives" src="https://www.lib.uidaho.edu/media/digital/library_white.png" class="img-fluid lib-logo-lg"></a>
+      <div class="col-md-6 d-flex align-self-center">
+
       </div>
       <div class="col-md-6 d-flex justify-content-end align-self-center">
-        <a href="https://www.lib.uidaho.edu/digital/"><img class="img-fluid d-none d-md-block lib-logo-md" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="Digital Initiatives"></a>
+          <a href="https://www.lib.uidaho.edu/"><img alt="Digital Initiatives" src="https://www.lib.uidaho.edu/media/digital/library_white.png" class="img-fluid lib-logo-lg"></a>
       </div>
 
-    </div>
-
-    <div class="col-md-12 text-center pt-3 pb-1">
-
-      <p class="text-white">Last updated {{ site.time | date: '%Y' }}
-      </p>
     </div>
   </div>
 </footer>
